--- a/functionAndCall/函数中this.html
+++ b/functionAndCall/函数中this.html
@@ -17,7 +17,7 @@
     <script type="text/javascript">
 
         btn.addEventListener("click", function () {
-            alert("this", this === btn)
+            alert(this === btn)
         })
 
 
