--- a/functionAndCall/订阅发布/三行版本.html
+++ b/functionAndCall/订阅发布/三行版本.html
@@ -11,10 +11,8 @@
 <body>
 
 
-
     <script>
-        window._on = window.addEventListener;
-        window._off = window.removeEventListener;
+        (window._on = window.addEventListener , window._off = window.removeEventListener);
         window._emit = (type, data) => window.dispatchEvent(new CustomEvent(type, { detail: data }));;
         window._once = (type, callback) => window.addEventListener(type, callback, { once: true, capture: true });
     </script>
