--- a/functionAndCall/订阅发布/手写版本.html
+++ b/functionAndCall/订阅发布/手写版本.html
@@ -38,6 +38,10 @@
                     delete this.handleMap[type]
                 }
             }
+            
+            once(){
+
+            }
         }
 
 
